<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CarLife</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="per1">お客様自身の情報を入力してください。</string>
    
    <string name="car1">車検証を参考に自動車情報を入力してください。</string>
    <string name="car2">２台以上車をお持ちの方は、追加してください。</string>
    
    <string name="con1">こちらの内容を送信します、個人情報は法に基づき管理されています。</string>
    
    <string name="his1">項目をタップすると、注文頂いた履歴の詳細を表示します。</string>
    
    <string name="hisshot1">過去の情報</string>
    <string name="hisshot2">お客様の情報</string>
    <string name="hisshot3">レッカー会社情報</string>
    
    <string name="kiyaku1">BIZLEAD 利用規約</string>
	<string name="kiyaku2">この規約（以下「本規約」といいます。）は、BIZLEAD株式会社（以下「当社」といいます。）が提供する BIZLEAD に関するすべての製品およびサービス（以下「本サービス」といいます。）の利用に関する条件を、本サービスを利用するお客様（以下「お客様」といいます。）と当社との間で定めるものです。</string>
	
	
	<string name="kiyaku3">1. 定義</string>
	<string name="kiyaku4">
	本規約では、以下の用語を使用します。 
	1.1. 「コンテンツ」とは、文章、音声、音楽、画像、動画、ソフトウェア、プログラム、コードその他の情報のことをいいます。 
	1.2. 「本コンテンツ」とは、本サービスを通じてアクセスすることができるコンテンツのことをいいます。 
	1.3. 「投稿コンテンツ」とは、お客様が本サービスに投稿、送信、アップロードしたコンテンツのことをいいます。 
	1.4. 「個別利用規約」とは、本サービスに関して、本規約とは別に「規約」、「ガイドライン」、「ポリシー」などの名称で当社が配布または掲示している文書のことをいいます。
	</string>
	<string name="kiyaku5">2. 規約への同意</string>
	<string name="kiyaku6">
		2.1 お客様は、本規約の定めに従って本サービスを利用しなければなりません。お客様は、本規約に有効かつ取消不能な同意をしないかぎり本サービスを利用できません。 
		2.2. お客様が未成年者である場合は、親権者など法定代理人の同意を得たうえで本サービスを利用してください。また、お客様が本サービスを事業者のために利用する場合は、当該事業者も本規約に同意したうえで本サービスを利用してください。 
		2.3. お客様は、本サービスを実際に利用することによって本規約に有効かつ取消不能な同意をしたものとみなされます。 
		2.4. 本サービスにおいて個別利用規約がある場合、お客様は、本規約のほか個別利用規約の定めにも従って本サービスを利用しなければなりません。
	</string>
	<string name="kiyaku7">	3. 規約の変更</string>
	<string name="kiyaku8">
		当社は、当社が必要と判断する場合、あらかじめお客様に通知することなく、いつでも、本規約および個別利用規約を変更できるものとします。変更後の本規約および個別利用規約は、当社が運営するウェブサイト内の適宜の場所に掲示された時点からその効力を生じるものとし、お客様は本規約および個別利用規約の変更後も本サービスを使い続けることにより、変更後の本規約および適用のある個別利用規約に対する有効かつ取消不能な同意をしたものとみなされます。かかる変更の内容をお客様に個別に通知することはいたしかねますので、本サービスをご利用の際には、随時、最新の本規約および適用のある個別利用規約をご参照ください。
	</string>
	<string name="kiyaku9">	4. アカウント</string>
	<string name="kiyaku10">
		4.1. お客様は、本サービスの利用に際してお客様ご自身に関する情報を登録する場合、真実、正確かつ完全な情報を提供しなければならず、常に最新の情報となるよう修正しなければなりません。 
		4.2. お客様は、本サービスの利用に際してパスワードを登録する場合、これを不正に利用されないようご自身の責任で厳重に管理しなければなりません。当社は、登録されたパスワードを利用して行なわれた一切の行為を、お客様ご本人の行為とみなすことができます。 
		4.3. 本サービスに登録したお客様は、いつでもアカウントを削除して退会することができます。 
		4.4. 当社は、お客様が本規約に違反しまたは違反するおそれがあると認めた場合、あらかじめお客様に通知することなく、アカウントを停止または削除することができます。 
		4.5. 当社は、最終のアクセスから１年間以上経過しているアカウントを、あらかじめお客様に通知することなく削除することができます。 
		4.6. お客様の本サービスにおけるすべての利用権は、理由を問わず、アカウントが削除された時点で消滅します。お客様が誤ってアカウントを削除した場合であっても、アカウントの復旧はできませんのでご注意ください。 
		4.7. 本サービスのアカウントは、お客様に一身専属的に帰属します。お客様の本サービスにおけるすべての利用権は、第三者に譲渡、貸与または相続させることはできません。
	</string>
	<string name="kiyaku11">5. プライバシー</string>
	<string name="kiyaku12">
		5.1. 当社は、お客様のプライバシーを尊重しています。 
		5.2. 当社は、お客様のプライバシー情報と個人情報を、BIZLEAD プライバシーポリシーに従って適切に取り扱います。 
		5.3.当社は、お客様から収集した情報を安全に管理するため、セキュリティに最大限の注意を払っています。
	</string>
	<string name="kiyaku13">6. サービスの提供</string>
	<string name="kiyaku14">
		6.1. お客様は、本サービスを利用するにあたり、必要なパーソナルコンピュータ、携帯電話機、通信機器、オペレーションシステム、通信手段および電力などを、お客様の費用と責任で用意しなければなりません。 
		6.2. 当社は、本サービスの全部または一部を、年齢、ご本人確認の有無、登録情報の有無、その他、当社が必要と判断する条件を満たしたお客様に限定して提供することができるものとします。 
		6.3. 当社は、当社が必要と判断する場合、あらかじめお客様に通知することなく、いつでも、本サービスの全部または一部の内容を変更し、また、その提供を中止することができるものとします。
	</string>
	<string name="kiyaku15">7. 緊急通報機能はありません</string>
	<string name="kiyaku16">
		本サービスは、警察機関、海上保安機関、消防機関その他の機関への緊急通報手段を提供するものではありません。
		以上
	</string>
	
	
	
	
	
	
	
<string name="kojinkiyaku">
<b>利用規約及び個人情報の取扱い</b>\n\n
株式会社ビズリード（以下「当社」といいます）は、当社が運営する「カーライフアプリケーション」（以下「本アプリ」といいます）の利用について以下のとおり本規約を定めます。\n
\n<b>定義</b>\n\n
第1条 本規約において使用する用語をそれぞれ以下のとおり定めます。\n
（1）「会員」とは、本アプリの登録会員をいいます。\n
（2）「利用者」とは、会員か否かを問わず、本アプリにアクセスし、本アプリの提供するサービスを受けることのできる全ての人（法人を含みます）をいいます。\n
（3）「本サービス」とは、本アプリにおいて当社が利用者に提供するサービスをいいます。\n
（本規約の適用範囲および規約内容の変更）\n
第2条 本規約は、本サービスの利用に関し当社および利用者に適用されます。利用者は、本規約を誠実に遵守し、本サービスを利用するものとします。\n
2．当社は、理由のいかんを問わず、利用者が本アプリにアクセスし、本サービスを利用したことを以って利用者が本規約に同意したものと見なします。\n
3．当社は、利用者への事前の通知なく本規約の内容を変更できるものとします。\n
\n
<b>（会員登録）</b>\n\n
第3条 本アプリの会員限定サービスをご利用いただくためには、本アプリへの会員登録が必要です。\n\n
2．会員登録を希望する利用者は、本規約に同意のうえ、当社所定の手続に従って登録を申込むものとします。なお、未成年者は、法定代理人の同意を得たうえで手続を行なうこととします。
\n3．当社は、利用者による正式な登録手続の完了後、当該利用者を本アプリの会員として登録します。ただし、当社は、登録を希望する利用者が以下に定める事由のいずれかに該当することが判明した場合には、会員登録を拒絶しまたは一旦登録した会員資格を抹消することがあります。
\n
（1）既に会員として登録されている場合
\n（2）規約違反等の事由により会員資格の停止または抹消が行なわれた実績がある場合
\n（3）情報提供料の不払いや遅延等の実績がある場合
\n（4）その他、会員として不適格であると当社が判断した場合
	</string>
	
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">RWSよりメッセージ! : </string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
</resources>
